Fixed few test cases and applied checkstyle